<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.giffing.wicket.spring.boot.starter</groupId>
	<artifactId>wicket-spring-boot-starter-parent</artifactId>
	<version>4.0.0</version>
	<packaging>pom</packaging>

	<name>Wicket Spring Boot Starter Parent</name>
	<description>
		This project (should) makes it easy to create 
		Wicket projects with a minimum of configuration effort. 
		Is uses Spring Boot to autoconfigure Wickets core and extension 
		with an reasonable default value which can be overridden 
		over property files.
		
		This parent project holds default configuration for the underlying 
		sub modules 
	</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.4</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<url>https://github.com/MarcGiffing/wicket-spring-boot</url>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/MarcGiffing/wicket-spring-boot/</url>
		<connection>scm:git:https://github.com/MarcGiffing/wicket-spring-boot.git</connection>
		<tag>wicket-spring-boot-starter-parent-3.1.2</tag>
	</scm>

	<developers>
		<developer>
			<id>mgiffing</id>
			<name>Marc Giffing</name>
			<roles>
				<role>Project lead</role>
			</roles>
		</developer>
	</developers>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>
		<apache-shiro.version>1.8.0</apache-shiro.version>
		<wicket.version>10.0.0</wicket.version>
		<wicketstuff.version>10.0.0</wicketstuff.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- internal dependencies -->
			<dependency>
				<groupId>com.giffing.wicket.spring.boot.starter</groupId>
				<artifactId>wicket-spring-boot-context</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.giffing.wicket.spring.boot.starter</groupId>
				<artifactId>wicket-spring-boot-starter</artifactId>
				<version>${project.version}</version>
			</dependency>
			<!-- Wicket dependencies -->
			<dependency>
				<groupId>org.apache.wicket</groupId>
				<artifactId>wicket-core</artifactId>
				<version>${wicket.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.wicket</groupId>
				<artifactId>wicket-auth-roles</artifactId>
				<version>${wicket.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.wicket</groupId>
				<artifactId>wicket-ioc</artifactId>
				<version>${wicket.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.wicket</groupId>
				<artifactId>wicket-extensions</artifactId>
				<version>${wicket.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.wicket</groupId>
				<artifactId>wicket-spring</artifactId>
				<version>${wicket.version}</version>
			</dependency>
			<!-- Wicketstuff dependencies -->
			<dependency>
				<groupId>org.wicketstuff</groupId>
				<artifactId>wicketstuff-annotation</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wicketstuff</groupId>
				<artifactId>wicketstuff-htmlcompressor</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>
			<dependency> <!-- required for the wicketstuff-htmlcompressor -->
				<groupId>com.yahoo.platform.yui</groupId>
				<artifactId>yuicompressor</artifactId>
				<version>2.4.8</version>
			</dependency>
			<dependency>
				<groupId>org.wicketstuff</groupId>
				<artifactId>wicketstuff-serializer-kryo2</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wicketstuff</groupId>
				<artifactId>wicketstuff-serializer-fast2</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wicketstuff</groupId>
				<artifactId>wicketstuff-restannotations</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wicketstuff</groupId>
				<artifactId>wicketstuff-restannotations-json</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wicketstuff</groupId>
				<artifactId>wicketstuff-springreference</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wicketstuff.htmlvalidator</groupId>
				<artifactId>wicketstuff-htmlvalidator</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wicketstuff</groupId>
				<artifactId>wicketstuff-jamon</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>

			<!-- Wicket other dependencies -->
			<dependency>
				<groupId>org.apache.wicket</groupId>
				<artifactId>wicket-bean-validation</artifactId>
				<version>${wicket.version}</version>
			</dependency>
			<dependency>
				<groupId>de.agilecoders.wicket.webjars</groupId>
				<artifactId>wicket-webjars</artifactId>
				<version>3.0.7</version>
			</dependency>
			<!-- Wicket datastore dependencies -->
			<dependency>
				<groupId>org.wicketstuff</groupId>
				<artifactId>wicketstuff-datastore-common</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wicketstuff</groupId>
				<artifactId>wicketstuff-datastore-cassandra</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wicketstuff</groupId>
				<artifactId>wicketstuff-datastore-hazelcast</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wicketstuff</groupId>
				<artifactId>wicketstuff-datastore-memcached</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wicketstuff</groupId>
				<artifactId>wicketstuff-datastore-redis</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>
			<!-- Wicket websockets -->
			<dependency>
				<groupId>org.apache.wicket</groupId>
				<artifactId>wicket-native-websocket-javax</artifactId>
				<version>${wicket.version}</version>
			</dependency>
			<!-- Wicket development dependencies -->
			<dependency>
				<groupId>org.apache.wicket</groupId>
				<artifactId>wicket-devutils</artifactId>
				<version>${wicket.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.jennybrown8.wicket-source</groupId>
				<artifactId>wicket-source</artifactId>
				<version>9.0.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.wicket</groupId>
				<artifactId>wicket-tester</artifactId>
				<version>${wicket.version}</version>
			</dependency>
			<!-- Security - Apache Shiro -->
			<dependency>
				<groupId>org.wicketstuff</groupId>
				<artifactId>wicketstuff-shiro</artifactId>
				<version>${wicketstuff.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.shiro</groupId>
				<artifactId>shiro-spring-boot-web-starter</artifactId>
				<version>${apache-shiro.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	<profiles>
		<profile>
			<id>release</id>
			<modules>
				<module>wicket-spring-boot-context</module>
				<module>wicket-spring-boot-starter</module>
				<module>wicket-spring-boot-starter-example</module>
			</modules>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<source>${java.version}</source>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>wicket-spring-boot-context</module>
				<module>wicket-spring-boot-starter</module>
				<module>wicket-spring-boot-starter-example</module>
			</modules>
		</profile>
	</profiles>
	<build>
		<plugins>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.13</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>apache.snapshots.https</id>
			<url>https://repository.apache.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>sonatype</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
</project>
